@@ -213,7 +213,7 @@ ol ol ol li                                       { background: none; padding: 0
 #calendarMonth ol ol li                           { color: #808080; list-style-type: disc }
 #calendarMonth li .text                           { font-weight: normal }
     </style>
-    <title>Open-Xchange - ${i18n.tr("Calendar")} - ${day.format("EEEE", day.time)}, ${day.format("d. MMMM", day.time)}</title>
+    <title>${documentTitle} - ${i18n.tr("Calendar")} - ${day.format("EEEE", day.time)}, ${day.format("d. MMMM", day.time)}</title>
   </head>
   <body onload="window.print()">
     <div id="layout" class="flexChilds">
