@@ -32,7 +32,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="de">
 <head>
-   <title>OX Calendar PrintView</title>
+   <title>${documentTitle} - Calendar PrintView</title>
    <style type="text/css">
       table, tr {
          width: 100%;
