@@ -200,7 +200,7 @@ ol ol ol li                                       { background: none; padding: 0
 #calendarMonth ol ol li                           { color: #808080; list-style-type: disc }
 #calendarMonth li .text                           { font-weight: normal }
     </style>
-    <title>Open-Xchange - ${i18n.tr("Calendar")} - ${i18n.tr("Week")} ${days[0].format("w", days[0].time)}</title>
+    <title>${documentTitle} - ${i18n.tr("Calendar")} - ${i18n.tr("Week")} ${days[0].format("w", days[0].time)}</title>
   </head>
   <body onload="window.print()">
     <div id="layout" class="flexChilds">
